Routing + Basic HTML Display

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,1 +1,19 @@
-<p>login-page works!</p>
+<h1>Application Name</h1>
+<h2>Sign in:</h2>
+
+<form>
+    <label for="email">Email:  </label>
+    <input id="email" placeholder="Enter email here">
+
+    <br>
+    <br>
+
+    <label for="password">Password:  </label>
+    <input id="password" placeholder="Enter password here">
+
+    <br>
+    <br>
+
+    <button>Login</button>
+
+</form>
